package chapter8_command.after;

public class Lamp {
    public void turnOn() {
        System.out.println("Lamp on");
    }

    public void turnOff() {
        System.out.println("Lamp off");
    }
}
